Add spinner executable for boot animation and text show
This commit introduces a new executable, spinner,
which supports two types of animations for boot sequences:

1 rotates square PNG images per frame
2 shows a sequence of square images from a strip of PNG images.

it supports read configuration from a conf file.
the default path of conf is /usr/share/platsch/spinner.conf
the dir of the conf can be set via env platsch_directory

here is an example of conf:

backdrop="/usr/share/platsch/splash.png"
symbol="/usr/share/platsch/Spinner.png"
fps=20
frames=0
text="Now loading..."
text_x=350
text_y=400
text_font="Sans"
textsize=30

Signed-off-by: LI Qingwu <Qing-wu.Li@leica-geosystems.com.cn>

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,13 @@
 project('platsch', 'c')
 
-have_cairo = get_option('HAVE_CAIRO')
+
+# If SPINNER is true, force HAVE_CAIRO to be true
+if get_option('SPINNER')
+    message('SPINNER is enabled, forcing HAVE_CAIRO to be true')
+    have_cairo = true
+else
+    have_cairo = get_option('HAVE_CAIRO')
+endif
 
 # Define dependencies conditionally based on the HAVE_CAIRO option
 platsch_dep = [dependency('libdrm', required: true)]
@@ -33,3 +40,24 @@ executable('platsch',
     install: true,
     include_directories: include_directories('.')
 )
+
+# Create the spinner executable if SPINNER true
+if get_option('SPINNER')
+    spinner_dep = [
+        dependency('cairo', required: true),
+        dependency('libdrm', required: true)
+    ]
+
+    spinner_src = [
+        'spinner.c',
+        'spinner_conf.c'
+    ]
+    executable('spinner',
+        spinner_src,
+        dependencies: spinner_dep,
+        link_with: libplatsch,
+        c_args: args,
+        install: true,
+        include_directories: include_directories('.')
+    )
+endif
