--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,1 +1,2 @@
 option('HAVE_CAIRO', type: 'boolean', value: true, description: 'Enable Cairo support')
+option('SPINNER', type: 'boolean', value: false, description: 'Enable spinner')
