platsch: split into platsch and libplatsch
Signed-off-by: LI Qingwu <Qing-wu.Li@leica-geosystems.com.cn>

--- a/meson.build
+++ b/meson.build
@@ -1,13 +1,10 @@
 project('platsch', 'c', version: '2024.06.0')
 
 dep_libdrm = dependency('libdrm', version : '>= 2.4.112', required : true)
-sources = ['platsch.c']
+sources = ['libplatsch.c']
 
-# Define the headers
-headers = ['platsch.h']
 
-# Create the platsch executable
-executable('platsch',
+libplatsch = static_library('libplatsch',
     sources,
     dependencies: dep_libdrm,
     install: true,
