--- a/meson.build
+++ b/meson.build
@@ -1,15 +1,18 @@
 project('platsch', 'c')
 
 platsch_dep = [dependency('libdrm', required: true)]
-sources = ['platsch.c']
+sources = ['libplatsch.c']
 
-# Define the headers
-headers = ['platsch.h']
 
-# Create the platsch executable
-executable('platsch',
+libplatsch = static_library('libplatsch',
     sources,
     dependencies: platsch_dep,
+)
+
+executable('platsch',
+    'platsch.c',
+    dependencies: platsch_dep,
+    link_with: libplatsch,
     install: true,
     include_directories: include_directories('.')
 )
