Add spinner executable for boot animation and text show
This commit introduces a new executable, spinner,
    which supports two types of animations for boot sequences:
    1 static PNG and text support.
    2 rotates square PNG images per frame
    3 shows a sequence of square images from a strip of PNG images.

Signed-off-by: LI Qingwu <Qing-wu.Li@leica-geosystems.com.cn>

--- a/meson.build
+++ b/meson.build
@@ -20,3 +20,23 @@ executable('platsch',
     install: true,
     install_dir: 'sbin'
 )
+
+if get_option('spinner')
+    spinner_dep = [
+        dependency('cairo', version: '>= 1.0'),
+        dep_libdrm
+    ]
+
+    spinner_src = [
+        'spinner.c',
+        'spinner_conf.c'
+    ]
+
+    executable('spinner',
+        spinner_src,
+        dependencies: spinner_dep,
+        link_with: libplatsch,
+        install: true,
+        install_dir:'sbin'
+    )
+endif
