Add spinner executable for boot animation and text show
This commit introduces a new executable, spinner,
    which supports two types of animations for boot sequences:
    1 static PNG and text support.
    2 rotates square PNG images per frame
    3 shows a sequence of square images from a strip of PNG images.

Signed-off-by: LI Qingwu <Qing-wu.Li@leica-geosystems.com.cn>

--- a/meson.build
+++ b/meson.build
@@ -10,3 +10,27 @@ libplatsch = static_library('libplatsch',
     install: true,
     include_directories: include_directories('.')
 )
+
+# Create the spinner executable if SPINNER true
+if get_option('SPINNER')
+    spinner_dep = [
+        dependency('cairo', required: true),
+        dependency('libdrm', required: true)
+    ]
+
+    spinner_src = [
+        'spinner.c',
+        'spinner_conf.c'
+    ]
+
+    args = ['-DSPINNER']
+
+    executable('spinner',
+        spinner_src,
+        dependencies: spinner_dep,
+        link_with: libplatsch,
+        c_args: args,
+        install: true,
+        include_directories: include_directories('.')
+    )
+endif
